<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/view_big_gap">

        <ImageView
            android:id="@+id/imgTitlePoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_poster_img_placeholder"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_background_poster_avengers" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/imgTitlePoster"
            app:layout_constraintEnd_toEndOf="@+id/imgTitlePoster"
            app:layout_constraintStart_toStartOf="@+id/imgTitlePoster"
            app:layout_constraintTop_toTopOf="@+id/imgTitlePoster" />

        <Button
            android:id="@+id/backBtn"
            style="@style/ToolbarButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back"
            app:drawableLeftCompat="@drawable/ic_path_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filmAgeRating"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginBottom="@dimen/view_big_gap"
            android:text="@string/age_rating_default"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/filmTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="13+" />

        <TextView
            android:id="@+id/filmTitle"
            style="@style/TextMainHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:text="@string/movie_title"
            app:layout_constraintBottom_toBottomOf="@+id/imgTitlePoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTitlePoster"
            tools:text="Avengers: \nEnd Game" />

        <TextView
            android:id="@+id/filmGenres"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:text="@string/movie_type"
            android:textColor="@color/accent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmTitle" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/RatingBarStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmGenres" />

        <TextView
            android:id="@+id/filmReviews"
            style="@style/ReviewTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_medium_gap"
            android:layout_marginBottom="@dimen/view_medium_gap"
            android:paddingStart="12dp"
            android:text="@string/movie_reviews"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/filmGenres"
            tools:ignore="RtlSymmetry"
            tools:text="125 Reviews" />

        <TextView
            android:id="@+id/filmStoryline"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/storyline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmReviews" />

        <TextView
            android:id="@+id/filmStorylineText"
            style="@style/TextRegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginEnd="@dimen/layout_gap"
            android:lineSpacingExtra="4dp"
            android:paddingTop="@dimen/view_medium_gap"
            android:paddingBottom="@dimen/view_medium_gap"
            android:text="@string/movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmStoryline" />

        <TextView
            android:id="@+id/filmCast"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmStorylineText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filmCastRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_big_gap"
            android:layout_marginEnd="@dimen/view_big_gap"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmCast"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
